Bug 496551 - Discover seems to update KNS content successfully, but then the same content is listed as updateable again after a re-launch
Summary: Discover seems to update KNS content successfully, but then the same content ...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: KNewStuff Backend (other bugs)
Version First Reported In: master
Platform: Fedora RPMs Linux
: NOR major
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-21 18:56 UTC by Nate Graham
Modified: 2024-11-27 14:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Frameworks 6.9
Sentry Crash Report:


Attachments
KNS update log (219.55 KB, text/x-log)
2024-11-21 18:56 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2024-11-21 18:56:46 UTC
Created attachment 176016 [details]
KNS update log

STEPS TO REPRODUCE
1. Have KNS content available for update
2. Launch Discover > Updates > click "Update"
3. Wait for it to finish, then quit Discover
4. Re-launch Discover > Updates


OBSERVED RESULT
The things Discover just told me it successfully updated are still there!


EXPECTED RESULT
Those things are not listed as updateable anymore


ADDITIONAL INFORMATION
Everything KDE from git master. Full debug log of the update transaction attached.
Comment 1 Bug Janitor Service 2024-11-26 11:08:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/knewstuff/-/merge_requests/344
Comment 2 Harald Sitter 2024-11-27 07:10:08 UTC
Git commit 213c7d42328534c0527aaa6ea12b915adc8f6f98 by Harald Sitter.
Committed on 27/11/2024 at 07:05.
Pushed by sitter into branch 'master'.

do not finish the transaction before it actually did anything

this would auto-delete it before the signals from the ctor fire and
consequently the change was never written to the registry making it look
like the install hadn't been carried out when in fact it was

M  +5    -1    src/core/transaction.cpp

https://invent.kde.org/frameworks/knewstuff/-/commit/213c7d42328534c0527aaa6ea12b915adc8f6f98