do not finish the transaction before it actually did anything

this would auto-delete it before the signals from the ctor fire and
consequently the change was never written to the registry making it look
like the install hadn't been carried out when in fact it was

BUG: 496551